--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -54,7 +54,7 @@
                 android:id="@+id/textView5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/crea_tu_cuenta"
+                android:text="@string/registrar_usuario"
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="32sp"
@@ -80,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/dark_gray"
                 android:hint="@string/nombre_de_usuario"
-                android:inputType="textPassword"
+                android:inputType="text"
                 android:padding="10dp"
                 android:textColorHint="@color/green" />
 
@@ -104,7 +104,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/dark_gray"
                 android:hint="@string/email"
-                android:inputType="textPassword"
+                android:inputType="textEmailAddress"
                 android:padding="10dp"
                 android:textColorHint="@color/green" />
 
@@ -127,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:background="@color/dark_gray"
                 android:hint="@string/contrasenia"
-                android:inputType="textEmailAddress"
+                android:inputType="textPassword"
                 android:padding="10dp"
                 android:textColorHint="@color/green" />
 
@@ -152,7 +152,13 @@
                 android:hint="@string/repetir_contrase_a"
                 android:inputType="textPassword"
                 android:padding="10dp"
-                android:textColorHint="@color/green" />
+                android:textColorHint="@color/green"
+                />
+
+            <View
+                android:id="@+id/view2"
+                android:layout_width="match_parent"
+                android:layout_height="16dp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -177,19 +183,18 @@
                     android:textSize="12sp" />
             </LinearLayout>
 
-            <View
-                android:id="@+id/view8"
-                android:layout_width="match_parent"
-                android:layout_height="16dp" />
-
             <Button
-                android:id="@+id/btncrearcuenta"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/green"
-                android:padding="10dp"
+                android:id="@+id/button"
+                android:layout_width="254dp"
+                android:layout_height="46dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:backgroundTint="@color/green"
+                android:gravity="center"
                 android:text="@string/crear_cuenta"
-                android:textColor="@color/white" />
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="18sp"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
