--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,22 +19,42 @@
         android:padding="30dp"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!-- ImageView -->
         <ImageView
             android:layout_width="35dp"
-            android:layout_height="29dp"
-            android:layout_gravity="center_vertical"
-            android:contentDescription="Culture Icon"
-            android:src="@drawable/img_101_logo" />
-
-        <TextView
-            android:id="@+id/tvExperencias"
-            android:layout_width="160dp"
             android:layout_height="40dp"
-            android:text="Experencias culturales"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:layout_marginLeft="25dp"/>
+            android:layout_gravity="center_vertical"
+            android:src="@drawable/img_101_logo"
+            android:layout_marginBottom="17dp"/>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="5dp">
+
+            <!-- "Experencias culturales" -->
+            <TextView
+                android:id="@+id/tvExperencias"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="@string/experencias_culturales"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="En Madrid"
+                android:textColor="@color/green"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"/>
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -61,7 +81,7 @@
                 android:text="Bienvenido de nuevo"
                 android:textColor="@color/green"
                 android:textStyle="bold"
-                android:textSize="30dp"
+                android:textSize="30dp"/>
 
             <!-- Email Label -->
             <TextView
@@ -70,11 +90,12 @@
                 android:text="Nombre de Usuario"
                 android:textSize="16sp"
                 android:textColor="@color/light_gray2"
-                android:layout_marginTop="130dp"
+                android:layout_marginTop="100dp"
                 android:paddingBottom="4dp"/>
 
             <!-- Email Input -->
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Introduzca tu usuario"
@@ -103,28 +124,52 @@
                 />
 
             <!-- Password Input -->
-            <EditText
+            <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Introduzca tu contraseña"
+                android:hint="@string/introduzca_tu_contrase_a"
                 android:inputType="textPassword"
                 android:padding="10dp"
                 android:textColorHint="@color/green"
                 android:layout_marginTop="1dp"
                 android:gravity="center"
-                android:background="@color/dark_gray"/>
+                android:background="@color/dark_gray"
+                android:drawableStart="@drawable/img_password"/>
+
+            <TextView
+                android:id="@+id/tvForgotPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/olvidaste_tu_contrase_a"
+                android:textSize="14sp"
+                android:textColor="@color/green"
+                android:paddingLeft="10dp"
+                android:layout_marginLeft="65dp"
+                android:layout_gravity="center"/>
 
             <Button
+                android:id="@+id/btnIniciarSesion"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="50dp"
-                android:text="Iniciar Sesion"
+                android:text="@string/iniciar_sesion"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:backgroundTint="@color/green"
                 android:gravity="center"
                 android:layout_marginLeft="80dp"/>
+
+
+            <TextView
+                android:id="@+id/tvRegisterAccount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/no_tienes_cuenta"
+                android:textSize="14sp"
+                android:textColor="@color/green"
+                android:paddingLeft="10dp"
+                android:layout_gravity="center"/>
 
 
 
