--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -16,21 +16,43 @@
         android:padding="30dp"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!-- ImageView -->
         <ImageView
-            android:layout_width="40dp"
+            android:layout_width="35dp"
             android:layout_height="40dp"
             android:layout_gravity="center_vertical"
-            android:src="@drawable/img_101_logo" />
+            android:contentDescription="Culture Icon"
+            android:src="@drawable/img_101_logo"
+            android:layout_marginBottom="17dp"/>
 
-        <TextView
-            android:id="@+id/tvExperencias"
-            android:layout_width="160dp"
-            android:layout_height="match_parent"
-            android:text="@string/experencias_culturales"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            android:textSize="18sp"
-            android:layout_marginLeft="25dp"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="5dp">
+
+            <!-- "Experencias culturales" -->
+            <TextView
+                android:id="@+id/tvExperencias"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="@string/experencias_culturales"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="En Madrid"
+                android:textColor="@color/green"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"/>
+        </LinearLayout>
 
     </LinearLayout>
 
@@ -186,9 +208,9 @@
                 android:id="@+id/btncrearcuenta"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/green"
                 android:padding="10dp"
                 android:text="@string/crear_cuenta"
+                android:backgroundTint="@color/green"
                 android:textColor="@color/white" />
 
         </LinearLayout>
