--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -231,6 +231,13 @@
                 android:backgroundTint="@color/green"
                 android:textColor="@color/white" />
 
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:layout_gravity="center"/>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
