--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -87,7 +87,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Nombre de Usuario"
+                android:text="Email"
                 android:textSize="16sp"
                 android:textColor="@color/light_gray2"
                 android:layout_marginTop="100dp"
@@ -98,10 +98,11 @@
                 android:id="@+id/etEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Introduzca tu usuario"
+                android:hint="Introduzca tu Email"
                 android:inputType="textEmailAddress"
                 android:padding="10dp"
                 android:gravity="center"
+                android:textColor="@color/white"
                 android:textColorHint="@color/green"
                 android:background="@color/dark_gray"
                 android:drawableStart="@drawable/img_username"/>
@@ -132,6 +133,7 @@
                 android:inputType="textPassword"
                 android:padding="10dp"
                 android:textColorHint="@color/green"
+                android:textColor="@color/white"
                 android:layout_marginTop="1dp"
                 android:gravity="center"
                 android:background="@color/dark_gray"
