--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="dark_gray">#455A64</color>
     <color name="green">#1FCE7D</color>
     <color name="light_gray2">#8CAAB9</color>
+    <color name="holo_green">#00C76A</color>
 
 </resources>
