Adde the Navigation Bar for our windows

--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -190,7 +190,7 @@
                 android:id="@+id/btnRegistro"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/green"
+                android:backgroundTint="@color/green"
                 android:padding="10dp"
                 android:text="@string/crear_cuenta"
                 android:textColor="@color/white" />
