--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -102,9 +102,9 @@
                 android:id="@+id/btnOne"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:backgroundTint="@color/green"
                 android:text="Crear Nuevo Grupo"
                 android:layout_marginTop="10dp"
-                android:background="@drawable/solid_button"
                 android:textColor="@color/white"/>
 
             <Button
