--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -223,10 +223,10 @@
                 android:layout_height="16dp" />
 
             <Button
-                android:id="@+id/btncrearcuenta"
+                android:id="@+id/btnSignOut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/green"
+                android:backgroundTint="@color/green"
                 android:padding="10dp"
                 android:text="Cerrar sesión"
                 android:textColor="@color/white" />
