--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#E7E7E7</color>
     <color name="dark_gray">#455A64</color>
-    <color name="green">#1FCE7D</color>
+    <color name="green">#058E3F</color>
     <color name="light_gray2">#8CAAB9</color>
     <color name="holo_green">#00C76A</color>
 
