--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,7 +90,7 @@
                 android:text="Email"
                 android:textSize="16sp"
                 android:textColor="@color/light_gray2"
-                android:layout_marginTop="100dp"
+                android:layout_marginTop="60dp"
                 android:paddingBottom="4dp"/>
 
             <!-- Email Input -->
@@ -154,14 +154,20 @@
                 android:id="@+id/btnIniciarSesion"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="50dp"
+                android:layout_marginTop="35dp"
                 android:text="@string/iniciar_sesion"
                 android:textStyle="bold"
                 android:textColor="@color/white"
                 android:backgroundTint="@color/green"
                 android:gravity="center"
-                android:layout_marginLeft="80dp"/>
+                android:layout_gravity="center" />
 
+            <com.google.android.gms.common.SignInButton
+                android:id="@+id/btnGoogleSignIn"
+                android:layout_width="wrap_content"
+                android:layout_height="45dp"
+                android:layout_marginTop="10dp"
+                android:layout_gravity="center" />
 
             <TextView
                 android:id="@+id/tvRegisterAccount"
@@ -170,8 +176,8 @@
                 android:text="@string/no_tienes_cuenta"
                 android:textSize="14sp"
                 android:textColor="@color/green"
-                android:paddingLeft="10dp"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"/>
 
             <ProgressBar
                 android:id="@+id/progressBar"
