--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,15 @@
         android:title="Ranking" />
 
     <item
-        android:id="@+id/navigation_desafios_home"
-        android:icon="@drawable/desafios_24"
-        android:title="Desafios" />
-
-    <item
         android:id="@+id/navigation_home_home"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="Home" />
+
+    <item
+        android:id="@+id/navigation_mapa"
+        android:icon="@drawable/map_24"
+        android:title="Mapa" />
+
+
 
 </menu>
